Fix content spacing, broke by removing CSS reset

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -262,6 +262,7 @@ h6:before {
 }
 
 p {
+  margin: 0;
   margin-bottom: 20px;
 }
  
